# Games_in_C

./: .gitignore  README.md  premake5.lua  premake_gmake2.bat
NearMissSnake/: CMakeLists.txt  CmakeLists.txt  Makefile  NearMissSnake.c  Readme.md  SFX_Cellar_UI_Button_41.wav.h  SFX_Cellar_UI_Button_43.wav.h  SFX_Cellar_UI_Button_67.wav.h  build.bat  build_snake.bat
NearMissSnake/projects/VS2022/raylib_game/: raylib_game.vcxproj
NearMissSnake/src/: MUSIC_4_rndd.xm.h  MUSIC_main.xm.h  SFX_Cellar_UI_Button_14.wav.h  SFX_apple.wav.h  SFX_ui_accept.wav.h  SFX_ui_cancel.wav.h  SFX_ui_menu.wav.h  compile_raylib_web.sh  game.c  game.h  levels.h  main.c  near_miss_snake.c  screen_difficulity.c  screen_gameplay.c  screen_level_start.c  screen_options.c  screen_title.c  screens.h  web_builder.c
NotTetris/: CmakeLists.txt  Readme.md
NotTetris/src/: game.h  tetromino.h
Pong/: CMakeLists.txt  Pong.c
Pong/src/: main.c
TEMPLATE/src/: compile_web_builder.sh
Tetris/: CmakeLists.txt  Makefile  Readme.md  game.c  make.bat  tetris_build.bat  tetromino.c  tetromino.h
Tetris/src/: game.c  main.c  tetromino.c
